--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
 
 <p>ベクタ形式画像(<code>".wmf", ".emf"</code>)を、品質を保ったまま拡大して表示することができます。</p>
 
+<hr>
+
+<h3>
+<a id="リリースノート" class="anchor" href="#%E3%83%AA%E3%83%AA%E3%83%BC%E3%82%B9%E3%83%8E%E3%83%BC%E3%83%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>リリースノート</h3>
+
+<ul>
+<li>Version 1.0.0 (2016/09/22)
+
+<ul>
+<li>1st Release</li>
+</ul>
+</li>
+</ul>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Boredbone/TestRepo">ShibugakiViewer</a> is maintained by <a href="https://github.com/Boredbone">Boredbone</a>.</span>
 
