--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/01_ja.png" alt="fig01"><br>
+      <p><a href="docs/images/raw/01_ja.png"><img src="docs/images/small/01_ja.png" alt="fig01"></a><br>
 登録されたフォルダ内の画像ファイルをライブラリ化し、条件を指定して検索することができます。</p>
 
 <hr>
@@ -27,40 +27,41 @@
 <h3>
 <a id="画像の表示" class="anchor" href="#%E7%94%BB%E5%83%8F%E3%81%AE%E8%A1%A8%E7%A4%BA" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>画像の表示</h3>
 
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/02_ja.png" alt="fig02"><br>
+<p><a href="docs/images/raw/02_ja.png"><img src="docs/images/small/02_ja.png" alt="fig02"></a><br>
 画像を拡大、縮小、回転して表示できます。  </p>
 
 <p>画像を自動で切り替えるスライドショー機能があります。<br>
 スライドショーの再生中は画像をフルスクリーンで表示できます。  </p>
 
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/03.png" alt="fig03"><br>
-ウインドウの背景色は任意に設定可能です。</p>
+<p><a href="docs/images/raw/03.png"><img src="docs/images/small/03.png" alt="fig03"></a><br>
+ビューアの背景色は任意に設定可能です。</p>
 
 <hr>
 
 <h3>
 <a id="画像データベース" class="anchor" href="#%E7%94%BB%E5%83%8F%E3%83%87%E3%83%BC%E3%82%BF%E3%83%99%E3%83%BC%E3%82%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>画像データベース</h3>
 
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/04_ja.png" alt="fig04"><br>
+<p><a href="docs/images/raw/08_ja.png"><img src="docs/images/small/08_ja.png" alt="fig08"></a><br>
+画像の入ったフォルダを登録します。<br>
+アプリの起動中はフォルダ内の画像の追加・削除を監視し、自動でライブラリを更新します。  </p>
+
+<p><a href="docs/images/raw/04_ja.png"><img src="docs/images/small/04_ja.png" alt="fig04"></a><br>
 登録された画像にタグを付けて管理します。<br>
 キーボードショートカットを設定すると、素早くタグを設定することができます。<br>
 タグをタップすることで、同じタグを含む画像を抽出します。  </p>
 
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/05_ja.png" alt="fig05"><br>
+<p><a href="docs/images/raw/05_ja.png"><img src="docs/images/small/05_ja.png" alt="fig05"></a><br>
 また、画像のグループ化を使用すると、電子書籍などの管理がより便利になります。<br>
 グループにもタグや評価の設定が可能です。  </p>
 
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/06_ja.png" alt="fig06"><br>
+<p><a href="docs/images/raw/06_ja.png"><img src="docs/images/small/06_ja.png" alt="fig06"></a><br>
 画像のサイズ、作成日時、タグ、評価などの条件を指定し、一致する画像を検索します。<br>
-"AND/OR"を使用した詳細な条件の設定が可能です。  </p>
+"AND/OR"を使用した詳細な条件の設定が可能です。<br>
+検索条件をアルバムに保存することで、後からもう一度利用することができます。  </p>
 
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/07_ja.png" alt="fig07"><br>
+<p><a href="docs/images/raw/07_ja.png"><img src="docs/images/small/07_ja.png" alt="fig07"></a><br>
 検索結果を表示する際、複数のソート条件を設定することが可能です。<br>
 例えば評価が高い順番に並べたうえで、評価が同じ場合は更新日時が新しい順番に並べることができます。  </p>
-
-<p><img src="https://github.com/Boredbone/ShibugakiViewer/raw/master/docs/images/small/08_ja.png" alt="fig08"><br>
-画像の入ったフォルダを登録します。<br>
-アプリの起動中はフォルダ内の画像の追加・削除を監視し、自動でライブラリを更新します。  </p>
 
 <hr>
 
