--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     </section>
 
     <section class="main-content">
-      <p><a href="docs/images/raw/01_ja.png"><img src="docs/images/small/01_ja.png" alt="fig01"></a><br>
+      <p>.NET Framework 4.6.2以上が必要です。</p>
+
+<hr>
+
+<p><a href="docs/images/raw/01_ja.png"><img src="docs/images/small/01_ja.png" alt="fig01"></a><br>
 登録されたフォルダ内の画像ファイルをライブラリ化し、条件を指定して検索することができます。</p>
 
 <hr>
@@ -47,8 +51,8 @@
 
 <p><a href="docs/images/raw/04_ja.png"><img src="docs/images/small/04_ja.png" alt="fig04"></a><br>
 登録された画像にタグを付けて管理します。<br>
-キーボードショートカットを設定すると、素早くタグを設定することができます。<br>
-タグをタップすることで、同じタグを含む画像を抽出します。  </p>
+タグをタップすることで、同じタグを含む画像を抽出します。<br>
+キーボードショートカットを設定すると、素早くタグを設定することができます。  </p>
 
 <p><a href="docs/images/raw/05_ja.png"><img src="docs/images/small/05_ja.png" alt="fig05"></a><br>
 また、画像のグループ化を使用すると、電子書籍などの管理がより便利になります。<br>
